--- a/wd/mods/p_banner/def.html
+++ b/wd/mods/p_banner/def.html
@@ -1,4 +1,5 @@
 <div class="p_banner">
-    我是banner内容(第一次引入)
-    <!--include "./wd/mods/p_banner_in/def.html"-->
+    我是banner内容(第1次引入)
+    <%mod_load('模块','p_banner_in','def.html')%>
+    <%mod_load('模块','p_banner_in','def11.html')%>
 </div>
