--- a/wd/mods/p_banner_in/def.html
+++ b/wd/mods/p_banner_in/def.html
@@ -1,5 +1,5 @@
 <div class="p_banner_in">
     banner的内部
-    我是banner内容(第2次引入)hahaha~
-    <!--include "./wd/mods/p_banner_in2/def.html"-->
+    我是banner内容(第2次引入)
+    <%mod_load('模块','p_banner_in2','def.html')%>
 </div>
